# airline-assistant-skill

./: .gitignore  README.md  config.yml  credentials.yml  endpoints.yml  pyproject.toml
actions/: __init__.py  action_booking_details.py  action_check_seats.py  action_check_upgrade.py  action_validate_booking.py
configs/: config.yml
data/: patterns.yml
data/flows/: booking_details.yml  check_seats.yml  check_upgrade.yml  chitchat.yml  select_booking.yml
docs/faq/: baggage.txt  booking_changes.txt  checkin_airport.txt  delays_compensation.txt  flying_blue.txt  seats_upgrades.txt
domain/: chitchat.yml  domain.yml
prompt_templates/: enterprise-search-template.jinja2  response-rephraser-template.jinja2
